<resources>
    <string name="app_name">TesisFirebaseFinal</string>
    //MainActivity
    <string name="ingrese_email">Ingrese Email</string>
    <string name="ingrese_clave">Ingrese Clave</string>
    <string name="registrar">REGISTRARSE</string>
    <string name="ingresar">INGRESAR</string>
    <string name="btnRecuperar">RECUPERAR CONTRASEÑA</string>
    <string name="rdPrincipal">PRINCIPAL</string>
    <string name="rdFamiliar">FAMILIAR</string>
    //RegistroActivity
    <string name="ingrese_apodo">Ingrese Apodo o Nombre</string>
    <string name="ingrese_clave_rep_RA">Repita su Clave</string>
    <string name="continuar_RA">CONTINUAR</string>
    //ActivityTranscripcion
    <string name="btnCerrarSesion">CERRAR SESION</string>
    //RecuperarClaveActivity
    <string name="correoRecuperar">Ingrese correo a recuperar</string>
    <string name="btnCorreoRecuperar">CONFIRMAR</string>
    //fragmentTranscripcion
    <string name="ingrese_titulo">Ingrese Título</string>
    <string name="ingrese_texto">Texto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mapa">Map</string>
    <string name="btnWhatsApp">ENVIAR UBICACION</string>
    <string name="open2">open2</string>
    <string name="close2">close2</string>
    <string name="open3">open3</string>
    <string name="close3">close3</string>
    <string name="title_activity_mapa_familiar">Map</string>
</resources>