<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#ffffff"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="229dp"
        android:layout_height="67dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277">


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingrese_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="114dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutClave"
        android:layout_width="229dp"
        android:layout_height="67dp"
        android:layout_marginBottom="224dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:layout_constraintVertical_bias="1.0"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline">

        <EditText
            android:id="@+id/editTextClave"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="@string/ingrese_clave"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="348dp"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnRecuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutClave"
        app:layout_constraintVertical_bias="0.216">

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="123dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/boton_redondo"
            android:onClick="btnRegistrarse"
            android:text="@string/registrar"
            android:textSize="18sp"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="121dp"
            android:layout_height="33dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/ingresar"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRecuperar"
        android:layout_width="247dp"
        android:layout_height="26dp"
        android:layout_weight="1"
        android:background="@drawable/borde_boton"
        android:text="@string/btnRecuperar"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>